--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="/Users/lunamejia/Projects/.css"/>
+    <link rel="stylesheet" type="text/css" href="index.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -24,13 +24,13 @@
 <body>
 <style>
     *{margin:0;padding:0;}
-    .banner{position:relative;width:90%;margin:0 auto;} 
+    .banner{position:relative;width:90%;margin:0 auto;}
     .banner img{width:100%;}
     .heading{color:black;position:absolute;top: 15%; width:100%;text-align:center;font-size: 7rem;}
     .text1{color:black;position:absolute;top: 45%; width:100%;text-align:center;font-size: 1.8rem;}
 
 </style>
-   <h1> &nbsp; ECYCLE MIAMI </h1> 
+   <h1> &nbsp; ECYCLE MIAMI </h1>
    <h3> &nbsp;  <i>SOLUTION TO ELECTRONIC WASTE</i> </h3>
    <br>
 
@@ -41,40 +41,40 @@
                      <h2 class="heading"> ECYCLE MIAMI </h2>
                      <p class="text1">TECHNOLOGICAL ADVANCEMENTS HAVE TAKEN OVER THE 21ST CENTURY.
                         <b>40 MILLION TONS</b> OF ELECTRONICS ARE THROWN AT EACH YEAR GLOBALLY.
-                        OUR GENERATION HAS THE OPPURTUNITY TO HELP OUR ENVIORNMENT BY LIMITING ELECTRONIC WASTE. 
+                        OUR GENERATION HAS THE OPPURTUNITY TO HELP OUR ENVIORNMENT BY LIMITING ELECTRONIC WASTE.
                         USING ECYCLE, ANYONE CAN SEND THEIR OLD ELECTRONIC TO BE REFURBISHED AND RECYCLED. </p>
             </div>
         </div>
-    </div> 
+    </div>
     <br>
     <br>
     <br>
     <br>
-    <button class ="button1" type="button" name="button1" > <h4> GET STARTED TODAY </h4></button>
+    <button class ="button1" type="button" name="button1" > GET STARTED TODAY </button>
     <br>
     <br>
     <br>
     <br>
     <h1 class="faqs">FAQS</h1>
     <br>
-    <table>
-        <tr> 
-     <td> <p class="faqsq1"> Why choose Ecycle Miami? </p> </td> <td> <p class="faqsq1"> What types of electronics can be recycled or refurbished?</p></td>
-     </tr>
-     <br>
-     <tr>
-     <td> <p class="faqsa1"> Ecycle Miami is the easiest platofrm to access areas that recyle or refurbish electronics. The platform is specifically designed to help anyone living in Miami find the perfect place for recycling their electronics.</p> </td> <td> <br> <p class="faqsa1"> While most electronics can be donated to a certain company or charity, there are still some restrictions. Our surveys and detailed descriptions on acceptable electronics will guide the user on where to donate their specific electronic.</p></td>
-     </tr>
-     <br>
-     <tr> 
-       <td> <p class="faqsq1"> What is the purpose of Ecycle Miami</p> </td>  <td> <p class="faqsq1"> What are some of examples of companies or charities that Ecycle Miami supports with their process? </p></td>
-     </tr>
-     <br>
-     <br>
-     <tr>
-         <td> <p class="faqsa1"> Ecycle Miami is a web platform designed to help the ciiizens of Miami find the perfect place to donate their electronics. Many users have trouble with donating certain electronics to a source that recycles or refurbishes electronics. Certain places only accept certian kinds of electronics which can be inconvieniet for many people. Ecycle Miami helps these users donate their old electronic in an easy, user friendly way. </p></p></td> <td><p class="faqsa1"> Ecycle Miami </p></td>
-     </tr>
-    </table>
+    <div class="faqs-container">
+      <div class="qa">
+        <div class="faqsq1"> Why choose Ecycle Miami? </div>
+        <div class="faqsa1"> Ecycle Miami is the easiest platofrm to access areas that recyle or refurbish electronics. The platform is specifically designed to help anyone living in Miami find the perfect place for recycling their electronics.</div>
+
+      </div>
+      <div class="qa">
+        <div class="faqsq1"> What types of electronics can be recycled or refurbished?</div>
+        <div class="faqsa1"> While most electronics can be donated to a certain company or charity, there are still some restrictions. Our surveys and detailed descriptions on acceptable electronics will guide the user on where to donate their specific electronic.</div>
+      </div>
+     <div class="qa">
+       <div class="faqsq1"> What is the purpose ofgiplatform designed to help the ciiizens of Miami find the perfect place to donate their electronics. Many users have trouble with donating certain electronics to a source that recycles or refurbishes electronics. Certain places only accept certian kinds of electronics which can be inconvieniet for many people. Ecycle Miami helps these users donate their old electronic in an easy, user friendly way. </div>
+     </div>
+     <div class="qa">
+       <div class="faqsq1"> What are some of examples of companies or charities that Ecycle Miami supports with their process? </div>
+       <div class="faqsa1"> Ecycle Miami </div>
+     </div>
+   </div>
     <br>
     <br>
 
