--- a/index.html
+++ b/index.html
@@ -22,14 +22,6 @@
 </head>
 
 <body>
-<style>
-    *{margin:0;padding:0;}
-    .banner{position:relative;width:90%;margin:0 auto;}
-    .banner img{width:100%;}
-    .heading{color:black;position:absolute;top: 15%; width:100%;text-align:center;font-size: 7rem;}
-    .text1{color:black;position:absolute;top: 45%; width:100%;text-align:center;font-size: 1.8rem;}
-
-</style>
    <h1> &nbsp; ECYCLE MIAMI </h1>
    <h3> &nbsp;  <i>SOLUTION TO ELECTRONIC WASTE</i> </h3>
    <br>
@@ -51,12 +43,7 @@
     <br>
     <br>
     <button class ="button1" type="button" name="button1" > GET STARTED TODAY </button>
-    <br>
-    <br>
-    <br>
-    <br>
     <h1 class="faqs">FAQS</h1>
-    <br>
     <div class="faqs-container">
       <div class="qa">
         <div class="faqsq1"> Why choose Ecycle Miami? </div>
@@ -68,7 +55,8 @@
         <div class="faqsa1"> While most electronics can be donated to a certain company or charity, there are still some restrictions. Our surveys and detailed descriptions on acceptable electronics will guide the user on where to donate their specific electronic.</div>
       </div>
      <div class="qa">
-       <div class="faqsq1"> What is the purpose ofgiplatform designed to help the ciiizens of Miami find the perfect place to donate their electronics. Many users have trouble with donating certain electronics to a source that recycles or refurbishes electronics. Certain places only accept certian kinds of electronics which can be inconvieniet for many people. Ecycle Miami helps these users donate their old electronic in an easy, user friendly way. </div>
+       <div class="faqsq1"> What is the purpose of Ecycle Miami?</div>
+       <div class="faqsa1"> Ecycle Miami is a web platform designed to help the ciiizens of Miami find the perfect place to donate their electronics. Many users have trouble with donating certain electronics to a source that recycles or refurbishes electronics. Certain places only accept certian kinds of electronics which can be inconvieniet for many people. Ecycle Miami helps these users donate their old electronic in an easy, user friendly way. </div>
      </div>
      <div class="qa">
        <div class="faqsq1"> What are some of examples of companies or charities that Ecycle Miami supports with their process? </div>
