--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <div class="title">
-    <h1>CYCLE MIAMI</h1>
+    <h1>ECYCLE MIAMI</h1>
     <h3><i>SOLUTION TO ELECTRONIC WASTE</i></h3>
   </div>
 
