added contact us section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
   <button class="button1" type="button" name="button1">GET STARTED TODAY</button>
   <h1 class="faqs">FAQS</h1>
+
   <div class="faqs-container">
     <div class="qa" id="faq1">
       <div class="faqsq1">Why choose Ecycle Miami?</div>
@@ -66,6 +67,11 @@
   </div>
   <br>
   <br>
+<h1 class="contacth"> Contact Us</h1>
+<br>
+<p class="contacta1"> Email: Isalulum@Gmail.com</p>
+<p class="contacta2"> Phone: 3059518584</p>
+
 
 </body>
 
