--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
   <button class="button1" type="button" name="button1">GET STARTED TODAY</button>
   <h1 class="faqs">FAQS</h1>
+
   <div class="faqs-container">
     <div class="qa" id="faq-1">
       <div class="faqsq1">Why choose Ecycle Miami?</div>
@@ -63,6 +64,16 @@
       <div class="faqsa1">Ecycle Miami</div>
     </div>
   </div>
+  <br>
+  <br>
+<h1 class="contacth"> Contact Us</h1>
+<br>
+<br>
+<p>__________________________________________________________________________________</p>
+<p class="contacta1"> Email: Isalulum@Gmail.com</p>
+<p class="contacta2"> Phone: 3059518584</p>
+<br>
+<br>
 
   <script type="text/javascript">
     var faqs = document.querySelectorAll('[id^="faq-"]');
