--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div class="title">
     <h1>ECYCLE MIAMI</h1>
-    <h3><i>SOLUTION TO ELECTRONIC WASTE</i></h3>
+    <h3><i>RAISNG AWARENESS ABOUT TECH POLLUTION IN SOUTH FLORIDA </i></h3>
   </div>
 
   <div class="banner">
@@ -60,8 +60,10 @@
     </div>
 
     <div class="qa" id="faq-3">
-      <div class="faqsq1">What are some of examples of companies or charities that Ecycle Miami supports with their process?</div>
-      <div class="faqsa1">Ecycle Miami</div>
+      <div class="faqsq1">How does Ecycle Miami relate with Miami, Florida?</div>
+      <div class="faqsa1">25 states have already enacted legislation establishing statewide e-waste recycling programs; Florida, unfortunately, is not one of them.The Florida Department of Environmental Protection strongly encourages that unwanted electronic products be recycled.
+        The problem is that there are no specific state laws regarding the discarding of electronic products; only very general guidelines exist.Ecycle Miami is the perfect online source for assisting with e-waste recycle programs in Miami. Using Ecycle Miami, Floridians can change the amount of E-waste in Miami.
+        /div>
     </div>
   </div>
   <br>
