--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@700&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com"> font for h1
+  <link rel="preconnect" href="https://fonts.gstatic.com" alt="h1"> 
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com"> font for h3
+  <link rel="preconnect" href="https://fonts.gstatic.com" alt= "h3"> 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -62,10 +62,12 @@
     <div class="qa" id="faq-3">
       <div class="faqsq1">How does Ecycle Miami relate with Miami, Florida?</div>
       <div class="faqsa1">25 states have already enacted legislation establishing statewide e-waste recycling programs; Florida, unfortunately, is not one of them.The Florida Department of Environmental Protection strongly encourages that unwanted electronic products be recycled.
-        The problem is that there are no specific state laws regarding the discarding of electronic products; only very general guidelines exist.Ecycle Miami is the perfect online source for assisting with e-waste recycle programs in Miami. Using Ecycle Miami, Floridians can change the amount of E-waste in Miami.
-        /div>
+        The problem is that there are no specific state laws regarding the discarding of electronic products; only very general guidelines exist.Ecycle Miami is the perfect online source for assisting with e-waste recycle programs in Miami. 
+       </div>
     </div>
   </div>
+  <br>
+  <br>
   <br>
   <br>
 <h1 class="contacth"> Contact Us</h1>
