Changed image width to 100%

--- a/info.html
+++ b/info.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="banner2">
-    <img alt="donatenow" src="file:///Users/lunamejia/Desktop/usa--new-jersey--jersey-city--close-up-of-stack-of-devices-on-desk-525446251-5af4cb5518ba0100374fe453.jpg">
+    <img alt="donatenow" width="100%" src="file:///Users/lunamejia/Desktop/usa--new-jersey--jersey-city--close-up-of-stack-of-devices-on-desk-525446251-5af4cb5518ba0100374fe453.jpg">
     <p class="banner2header"> BEGIN ECYCLING:</p>
     <button class="button2" type="button" name="button1">SURVERY</button>
     <p class = "banner2text"> Fill out the survery to begin your Ecycle Miami experience!</p>
@@ -32,8 +32,8 @@
 
 
 
-    
-  
+
+
 
 
 
