--- a/survey2.html
+++ b/survey2.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="/Users/lunamejia/Projects/project1/EcycleMiami/survey2.css">
+    <link rel="stylesheet" type="text/css" href="survey2.css">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
   <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Montserrat+Subrayada:wght@700&family=Taviraj&family=Trirong&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
