--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
 
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/Users/lunamejia/Projects/project1/EcycleMiami/info.css"/>
+    <link rel="stylesheet" type="text/css" href="info.css"/>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
