--- a/info.html
+++ b/info.html
@@ -42,7 +42,7 @@
         </nav>
 
     <div class="banner2">
-    <img alt="donatenow" src="file:///Users/lunamejia/Desktop/usa--new-jersey--jersey-city--close-up-of-stack-of-devices-on-desk-525446251-5af4cb5518ba0100374fe453.jpg" width= "100%">
+    <img alt="donatenow" src="phone.jpg" width= "100%">
     <div> <button class="button2" type="button" name="button1"onclick='window.open("survey2.html","_self")'>SURVERY</button>
     <p class = "banner2text">BEGIN YOUR ECYCLE MIAMI EXPERIENCE</p>
     </div>
