--- a/info.html
+++ b/info.html
@@ -53,7 +53,7 @@
    <p class= "infobody">What happens to all this technology when we no longer want it or need it? What happens to our old iPhones, for example, when we decide we want a newer, “cooler” model? 
      According to Dosomething.org, 20-50 million metric tons of e-waste are disposed of worldwide every year. E-waste represents 2% of America’s trash in landfills but it equals to 70% of overall toxic waste.Only 12.5% of e-waste is currently recycled. </p>
       <p class="infobody">E-waste is the fastest growing municipal waste stream in America, according to the EPA.It takes 530 lbs of fossil fuel, 48lbs of chemicals and 1.5 tons if water to manufacture one computer and monitor. 
-     </td>  <td> <img class="infoimg" src = "trash.jpg"></td>
+     </td>  <td> <img class="infoimg" src = "phone.jpg"></td>
       </tr> 
       <tr>
       <td>
